--- a/booking-backend/.env
+++ b/booking-backend/.env
@@ -1,3 +1,3 @@
 
 PORT=5000
-MONGO_URI=mongodb+srv://satoshikemboi:Kemboi0000@cluster0.o8rkxy6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://felixkemboi824:Kemboi0000@cluster0.ygvwucy.mongodb.net/bookings?retryWrites=true&w=majority&appName=Cluster0
