--- a/booking-backend/.env
+++ b/booking-backend/.env
@@ -1,3 +1,7 @@
 
 PORT=5000
 MONGO_URI=mongodb+srv://felixkemboi824:Kemboi0000@cluster0.ygvwucy.mongodb.net/bookings?retryWrites=true&w=majority&appName=Cluster0
+
+EMAIL_USER=satoshikemboi@gmail.com
+EMAIL_PASS=nxeyiycrlxhqegcp
+BUSINESS_OWNER_EMAIL=satoshikemboi@gmail.com
