--- a/booking-backend/package.json
+++ b/booking-backend/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.16.1",
-    "nodemailer": "^7.0.4"
+    "mongoose": "^8.16.1"
   }
 }
