--- a/booking-backend/.env
+++ b/booking-backend/.env
@@ -1,5 +1,6 @@
 
 PORT=5000
+NODE_ENV=production
 MONGO_URI=mongodb+srv://felixkemboi824:Kemboi0000@cluster0.ygvwucy.mongodb.net/bookings?retryWrites=true&w=majority&appName=Cluster0
 
 PAYSTACK_SECRET_KEY=sk_test_f7cc6498f15c6777a91068664ff5603477d272ff
