--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
-    "react": "^19.1.0",
+    "react": "18.3.1",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "18.3.1",
     "react-paystack": "^6.0.0"
   },
   "devDependencies": {
