--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
-    "react-dom": "18.3.1",
-    "react-paystack": "^6.0.0"
+    "react-dom": "^18.3.1",
+    "react-paystack": "^6.0.0",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
