--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
     "react": "^18.3.1",
