--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,19 @@
     "@fortawesome/free-regular-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "@react-three/drei": "^9.56.4",
+    "@react-three/fiber": "^8.13.7",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-paystack": "^6.0.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "three": "^0.146.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
